--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -4,6 +4,12 @@ The Narrative Method Store provides an API to dynamically access the available
 narrative method/app/type specifications and documentation.
 
 
+VERSION: 0.2.8 (Released 8/25/15)
+--------------------------------------
+UPDATED FEATURES / MAJOR BUG FIXES:
+- Git refreshing mechanism redesigned (there is background thread now)
+
+
 VERSION: 0.2.7 (Released 8/7/15)
 --------------------------------------
 UPDATED FEATURES / MAJOR BUG FIXES:
