--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -4,6 +4,13 @@ The Narrative Method Store provides an API to dynamically access the available
 narrative method/app/type specifications and documentation.
 
 
+VERSION: 0.3.0 (Released 8/25/15)
+--------------------------------------
+UPDATED FEATURES / MAJOR BUG FIXES:
+- Dynamic repos and namespaces in methods related to it are now supported.
+- Git commit hash versions are propagated in method-specs for dynamic repos.
+
+
 VERSION: 0.2.8 (Released 8/25/15)
 --------------------------------------
 UPDATED FEATURES / MAJOR BUG FIXES:
