--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -7,8 +7,8 @@ VERSION: 0.3.10 (Released TBD)
 ------------------------------
 
 UPDATED FEATURES / MAJOR BUG FIXES:
-- Added the `query_on_empty_input`, `result_array_index`, and `path_to_subdata` fields to the
-  dynamic dropdown spec.
+- Added the `query_on_empty_input`, `result_array_index`, and `path_to_selection_items` fields to
+  the dynamic dropdown spec.
 
 VERSION: 0.3.9 (Released 4/1/19)
 -----------------------------
